--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> My Profile V2</title>
+    <title> My medium copycat</title>
     <link rel="stylesheet" href="style.css">
 
   </head>
